@@ -5,6 +5,7 @@ readsb (4.0.2~dev) UNRELEASED; urgency=medium
   * Make installation and removal process more robust.
   * Move build build instruction into INSTALL file.
   * Fix handling of inproper status message length for GNS Hulc antenna.
+  * Prevent out of bounds read in case of Hulc status message.
   * Add error reporting for output file creation and setting non blocking mode.
   * Contribution wiedehopf:
     * Demodulator slice_phase improvements
